# pythonmessenger

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  main.py  makewidgets.py  netw.py  networking.py  setup.cfg  window.py
messengerUI/: __init__.py  widgets.py
src/thunmessenger/: __init__.py  netw.py
src/thunmessenger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/thunmessenger/messengerUI/: __init__.py  widgets.py
src/tkintermessenger/: __init__.py  netw.py
src/tkintermessenger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tkintermessenger/messengerUI/: __init__.py  widgets.py
ui/: widgets.py
