[metadata]
name = thunmessenger
version = 0.0.5
author = Oliver Sader
author_email = thunfisch987@gmail.com
keywords = messenger, network, GUI, tkinter
description = A messenger written in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thunfisch987/pythonmessenger
project_urls =
    Bug Tracker = https://github.com/thunfisch987/pythonmessenger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
include_package_data = True
install_requires =
    dataclasses
    pygame
    IPy

[options.packages.find]
where = src